fix: visibility

--- a/src/app/root-styles/_header.scss
+++ b/src/app/root-styles/_header.scss
@@ -20,10 +20,13 @@ $mp-view-gap: math.div(($mp-height - $mp-view-height), 2);
     top: $mp-view-gap;
     left: 0; right: 0;
   
-    margin: auto;
     width: 96%;
     height: $mp-view-height;
+
+    margin: auto;
+    padding: 0 4px;
     border-radius: 8px;
+    box-sizing: border-box;
 
     @include ml.style(background-color, (background, app-bar));
   }
@@ -33,29 +36,36 @@ $mp-view-gap: math.div(($mp-height - $mp-view-height), 2);
 
     display: flex;
     align-items: center;
-    
+
     width: 100%;
     height: 100%;
+
   }
 
   // &-suggest {}
 
-  &-icon {
+  &-button {
+    margin: 0 4px;
+  }
+
+  &-left-actions, &-right-actions {
     position: absolute;
     top: 0; left: 0; right: 0; bottom: 0;
     margin: auto;
-    width: 24px;
-    height: 24px;
-
-    &.people {
-      width: 32px;
-      height: 32px;
-    }
   }
 
-  &-left-actions {
-    margin: 0 8px;
-    z-index: 2;
+  &-left-actions, &-right-actions {
+    transition: ml.transition(transform, slow, deceleration);
+  }
+
+  &-icon {
+    width: 24px;
+    height: 24px;
+  }
+
+  &-people-icon {
+    width: 32px;
+    height: 32px;
   }
 
   &-content {
@@ -63,10 +73,6 @@ $mp-view-gap: math.div(($mp-height - $mp-view-height), 2);
     z-index: 0;
     flex: 1;
     height: 100%;
-  }
-
-  &-right-actions {
-    margin: 0 8px;
   }
 
   &-ripple {
@@ -86,11 +92,8 @@ $mp-view-gap: math.div(($mp-height - $mp-view-height), 2);
       height: $pc-height;
       width: 100%;
       border-radius: 0;
-    }
-    
-    &-icon {
-      width: 32px;
-      height: 32px;
+
+      padding-left: 0;
     }
 
     &-left-actions {
@@ -99,13 +102,15 @@ $mp-view-gap: math.div(($mp-height - $mp-view-height), 2);
       min-width: 0 !important;
       margin: 0;
       border-radius: 0 !important;
+
+      .rh-icon {
+        width: 32px;
+        height: 32px;
+      }
     }
 
     &-content {
       margin: 0 8px;
-    }
-
-    &-right-actions {
     }
   }
 }
